--- a/NucbaNFT/index.html
+++ b/NucbaNFT/index.html
@@ -6,6 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./assets/styles.css" />
 		<link rel="stylesheet" href="./assets/mediaqueries.css" />
+		<!-- CDN de Font Awesome -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+			integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<title>NFT Landing</title>
 	</head>
 	<body>
@@ -25,11 +33,12 @@
 					<li><a href="#">Contactanos</a></li>
 				</ul>
 				<label for="cart-toggle" class="cart-label">
-					<img
+					<!-- <img
 						src="./assets/img/cart-icon.svg"
 						alt="Carrito de compras"
 						class="cart-icon"
-					/>
+					/> -->
+					<i class="fa-solid fa-cart-shopping cart-icon"></i>
 				</label>
 				<input type="checkbox" id="cart-toggle" />
 
