--- a/NucbaNFT/index.html
+++ b/NucbaNFT/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./assets/styles.css" />
 		<link rel="stylesheet" href="./assets/mediaqueries.css" />
+		<link rel="stylesheet" href="./assets/animaciones.css" />
 		<!-- CDN de Font Awesome -->
 		<link
 			rel="stylesheet"
@@ -26,11 +27,17 @@
 				<input id="menu-toggle" type="checkbox" />
 
 				<ul class="navbar-list">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Descubre</a></li>
-					<li><a href="#">BTC</a></li>
-					<li><a href="#">Youtube</a></li>
-					<li><a href="#">Contactanos</a></li>
+					<li><a href="#hero">Home</a></li>
+					<li><a href="#discover">Descubre</a></li>
+					<li><a href="#products">BTC</a></li>
+					<li>
+						<a href="https://www.youtube.com/c/Nucbaok" target="_blank">
+							Youtube
+						</a>
+					</li>
+					<li>
+						<a href="https://nucba.com.ar/" target="_blank">Contactanos</a>
+					</li>
 				</ul>
 				<label for="cart-toggle" class="cart-label">
 					<!-- <img
@@ -118,12 +125,16 @@
 					</div>
 					<button class="btn-add">Comprar</button>
 				</div>
+				<div class="overlay"></div>
 			</nav>
 		</header>
 		<main>
 			<section id="hero">
 				<div class="hero-info">
-					<h1>Descubre la nueva era de Crypto</h1>
+					<h1>
+						Descubre la nueva era de
+						<span>Crypto</span>
+					</h1>
 					<p>
 						NUCBA NFT es el primer Marketplace educativo tecnológico de NFT, que
 						son elementos digitales épicos que realmente puedes poseer. Los
