Nucba NFT parte 2

--- a/Javascript/NucbaNFT/index.html
+++ b/Javascript/NucbaNFT/index.html
@@ -75,7 +75,26 @@
 				<div class="cart">
 					<h2>Tus NFTs</h2>
 
-					<div class="cart-container"></div>
+					<div class="cart-container">
+						<!-- HOLA! SOY RODRI DEL PASADO CON UN EJEMPLO DE PRODUCTO EN EL CART -->
+
+						<!-- <div class="cart-item">
+							<img
+								src="./assets/img/products/bunny.png"
+								alt="Nft del carrito"
+							/>
+							<div class="item-info">
+								<h3 class="item-title">NOMBRE</h3>
+								<p class="item-bid">Current bid</p>
+								<span class="item-price">$BID ETH</span>
+							</div>
+							<div class="item-handler">
+								<span class="quantity-handler down" data-id="ID">-</span>
+								<span class="item-quantity">CANTIDAD</span>
+								<span class="quantity-handler up" data-id="ID">+</span>
+							</div>
+						</div> -->
+					</div>
 
 					<span class="divider"></span>
 
